--- a/platformio.ini
+++ b/platformio.ini
@@ -12,9 +12,15 @@
 platform = espressif32
 board = esp32-c3-devkitm-1
 framework = arduino
-lib_deps = bodmer/TFT_eSPI@^2.4.79
+lib_deps = 
+	bodmer/TFT_eSPI@^2.4.79
+	bblanchon/ArduinoJson@^6.21.2
+	knolleary/PubSubClient@^2.8
+	256dpi/MQTT@^2.5.1
+	bitbank2/JPEGDEC@^1.2.6
 monitor_speed = 115200
+monitor_filters = time, default, esp32_exception_decoder
 build_flags = 
 	-D ARDUINO_USB_MODE=1
 	-D ARDUINO_USB_CDC_ON_BOOT=1
-    -D CORE_DEBUG_LEVEL=5
+	-D CORE_DEBUG_LEVEL=5
